update various stuff
git-svn-id: https://svn.code.sf.net/p/apertium/svn/branches/apertium-lex-tools@33893 72bbbca6-d526-0410-a7d9-f06f51895060

--- a/README
+++ b/README
@@ -48,3 +48,4 @@ Example output (with -d):
 ^vida<n><f><sg>/life<n><sg>$ ^normal<adj><mf><sg>/normal<adj><sg>$
 ^.<sent>/.<sent>$
 
+If the bilingual dictionary is updated, a new model will need to be trained.
