--- a/AUTHORS
+++ b/AUTHORS
@@ -1,9 +1,12 @@
-2015-2018, Tino Didriksen <mail@tinodidriksen.com>
-2011-2017, Francis M. Tyers <ftyers@prompsit.com>
+2011-2020, Francis M. Tyers <ftyers@prompsit.com>
+2012-2020, Kevin Brubeck Unhammer <unhammer@fsfe.org>
+2015-2020, Tino Didriksen <mail@tinodidriksen.com>
+2019-2020, Daniel Swanson <awesomeevildudes@gmail.com>
+2019, Danielle Rossetti <daniellecrossetti@gmail.com>
+2019, Lokendra Singh <lokendras1998@gmail.com>
+2019, Sushain Cherivirala <sushain@skc.name>
+2018, Abinash Senapati <abinashsena@gmail.com>
 2017, Tommi Pirinen <flammie@iki.fi>
-2012-2016, Kevin Brubeck Unhammer <unhammer@fsfe.org>
 2016, Xavi Ivars <xavi.ivars@gmail.com>
 2012-2013, Filip Petkovski <filpetkovski@gmail.com>
-2013, Sjur Nørstebø Moshagen <sjur.n.moshagen@uit.no>
-2012, Trond Trosterud <trond.trosterud@hum.uit.no>
-2011, Daniel Huang <dtvrij74@gmail.com>
+2012, Trond Trosterud <trond.trosterud@uit.no>
