--- a/README
+++ b/README
@@ -1,1 +1,7 @@
-http://wiki.apertium.org/wiki/Constraint-based_lexical_selection_module
+https://wiki.apertium.org/wiki/Constraint-based_lexical_selection_module
+
+There are binaries available for Debian, Ubuntu, Fedora, CentOS, OpenSUSE,
+Windows, and macOS. We package both nightly builds and releases.
+See https://wiki.apertium.org/wiki/Installation for more information.
+Only build from source if you either want to change this tool's behavior,
+or are on a platform we don't yet package for.
